# candas

./: .gitignore  .gitmodules  CMakeLists.txt  CODING-GUIDELINES.md  LICENSE.txt  README.md
.circleci/: config.yml
cmake/: GetGitRevision.cmake  GrabGitRev.cmake.in
contrib/dockerfiles/: README.md
contrib/dockerfiles/core/: Dockerfile
contrib/dockerfiles/env-clang/: Dockerfile  build-steps-clang.sh  build-steps-cmake.sh
contrib/dockerfiles/env-clang-libcxx/: Dockerfile  build-steps-libcxx.sh
contrib/dockerfiles/env-gcc/: Dockerfile  build-steps-gcc.sh
include/candas/: dataframe.hpp  dataframe_iterator.hpp  info.hpp.in
include/candas/detail/: emplacer.hpp  pack_tools.hpp
src/: main.cpp
src/candas/: dataframe.hpp
src/candas/detail/: emplacer.hpp  pack_tools.hpp  repeater.hpp
tests/: CMakeLists.txt
tests/cpp/: main.cpp  test_info.cpp
tests/cpp/dataframe/: test_accessors.cpp  test_construction.cpp  test_inserters.cpp
tests/cpp/dataframe_iterator/: test_construction.cpp  test_iterator_behavior.cpp
